made header and main section

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,5 +1,17 @@
 <header class="header">
-	<div class="container">
-		<div class="header__body"></div>
-	</div>
+	<nav class="container">
+		<ul class="header__row">
+			<li class="header__logo"><a href="index.html">Indicorp</a></li>
+			<li>
+				<ul class="header__list">
+					<li class="header__item"><a href="index.html">Home</a></li>
+					<li class="header__item"><a href="index.html">Product</a></li>
+					<li class="header__item"><a href="index.html">Pricing</a></li>
+					<li class="header__item"><a href="index.html">Contact</a></li>
+				</ul>
+			</li>
+		</ul>
+
+		<button class="header__burger"><span></span></button>
+	</nav>
 </header>
