--- a/#src/index.html
+++ b/#src/index.html
@@ -5,13 +5,24 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link rel="stylesheet" href="css/style.min.css">
-		<title>Indicorp // Digital Marketing</title>
+		<title>Indicorp. Digital Marketing</title>
 	</head>
 	<body>
 		<div class="wrapper">
 			@@include('_header.html')
 			<div class="content">
-				
+
+				<section class="main-section main-section__main-section">
+					<div class="container">
+						<h1 class="main-section__title">Empower your bussines</h1>
+						<p class="main-section__text">We know how large objects will act, but things on a small scale.</p>
+						<div class="main-section__links">
+							<a href="index.html" class="main-section__link main-section__link-first">Get Quote Now</a>
+							<a href="index.html" class="main-section__link main-section__link-second">Learn More</a>
+						</div>
+					</div>
+				</section>
+
 			</div>
 			@@include('_footer.html')
 		</div>
