made features section

--- a/#src/index.html
+++ b/#src/index.html
@@ -21,6 +21,29 @@
 							<a href="index.html" class="main-section__link main-section__link-second">Learn More</a>
 						</div>
 					</div>
+					<div class="container">
+
+						<ul class="features features__row">
+							<li class="features__item item-features">
+								<div class="item-features__icon"><img src="img/features/01.svg" alt="Briefcase icon"></div>
+								<h3 class="item-features__title">Digital Marketing</h3>
+								<p class="item-features__text">We focus on ergonomics and meeting you where you work. </p>
+							</li>
+
+							<li class="features__item item-features">
+								<div class="item-features__icon"><img src="img/features/02.svg" alt="Briefcase icon"></div>
+								<h3 class="item-features__title">National top 50 firms</h3>
+								<p class="item-features__text">Just type what's on your mind and we'll get you there.</p>
+							</li>
+
+							<li class="features__item item-features item-features--active">
+								<div class="item-features__icon"><img src="img/features/03.svg" alt="Briefcase icon"></div>
+								<h3 class="item-features__title item-features__title--active">Digital Marketing</h3>
+								<p class="item-features__text item-features__text--active">The quick fox jumps over the lazy dog</p>
+							</li>
+						</ul>
+
+					</div>
 				</section>
 
 			</div>
