--- a/#src/index.html
+++ b/#src/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link rel="stylesheet" href="css/style.min.css">
-		<title>Indicorp. Digital Marketing</title>
+		<title>Indicorp | Digital Marketing</title>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -31,13 +31,13 @@
 							</li>
 
 							<li class="features__item item-features">
-								<div class="item-features__icon"><img src="img/features/02.svg" alt="Briefcase icon"></div>
+								<div class="item-features__icon"><img src="img/features/02.svg" alt="Shop icon"></div>
 								<h3 class="item-features__title">National top 50 firms</h3>
 								<p class="item-features__text">Just type what's on your mind and we'll get you there.</p>
 							</li>
 
 							<li class="features__item item-features item-features--active">
-								<div class="item-features__icon"><img src="img/features/03.svg" alt="Briefcase icon"></div>
+								<div class="item-features__icon"><img src="img/features/03.svg" alt="Carboon notebook icon"></div>
 								<h3 class="item-features__title item-features__title--active">Digital Marketing</h3>
 								<p class="item-features__text item-features__text--active">The quick fox jumps over the lazy dog</p>
 							</li>
@@ -46,6 +46,36 @@
 					</div>
 				</section>
 
+				<section class="advantages advantages__advantages">
+					<h2 class="advantages__title title">Why choose us</h2>
+					<p class="advantages__text text">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
+					<div class="container">
+
+						<ul class="advantages__row">
+							<li class="advantages__item item-advantages">
+								<div class="item-advantages__icon"><img src="img/advantages/01.svg" alt="Users icon"></div>
+								<span class="item-advantages__title">3k</span>
+								<p class="item-advantages__text">Cases done</p>
+							</li>
+							<li class="advantages__item item-advantages">
+								<div class="item-advantages__icon"><img src="img/advantages/02.svg" alt="Stats icon"></div>
+								<span class="item-advantages__title">45</span>
+								<p class="item-advantages__text">Happy customers</p>
+							</li>
+							<li class="advantages__item item-advantages">
+								<div class="item-advantages__icon"><img src="img/advantages/03.svg" alt="Award icon"></div>
+								<span class="item-advantages__title">12+</span>
+								<p class="item-advantages__text">Award winning</p>
+							</li>
+							<li class="advantages__item item-advantages">
+								<div class="item-advantages__icon"><img src="img/advantages/04.svg" alt="Tool box icon"></div>
+								<span class="item-advantages__title">1.5k</span>
+								<p class="item-advantages__text">Cases done</p>
+							</li>
+						</ul>
+
+					</div>
+				</section>
 			</div>
 			@@include('_footer.html')
 		</div>
