made service section

--- a/#src/index.html
+++ b/#src/index.html
@@ -76,6 +76,22 @@
 
 					</div>
 				</section>
+
+				<section class="service service__service">
+					<h2 class="service__title title">We are providing best business service.</h2>
+					<p class="service__text text">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
+					<ul class="container service__row">
+						<li class="service__video"><a href="http://youtu.be/dQw4w9WgXcQ" target="_blank"><span></span></a></li>
+						<li class="service__content content-service">
+							<h3 class="content-service__title title">Most trusted in our field</h3>
+							<p class="content-service__text text">Most calendars are designed for teams. Slate is designed for freelancers who want a simple way to plan their schedule.</p>
+							<ul class="content-service__list">
+								<li class="content-service__item content-service__item_1">the quick fox jumps over the lazy dog</li>
+								<li class="content-service__item content-service__item_2">the quick fox jumps over the lazy dog</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
 			</div>
 			@@include('_footer.html')
 		</div>
@@ -87,3 +103,6 @@
 
 	</body>
 </html>
+
+
+<!-- href="http://youtu.be/dQw4w9WgXcQ" -->
