made clients section

--- a/#src/index.html
+++ b/#src/index.html
@@ -92,6 +92,18 @@
 						</li>
 					</ul>
 				</section>
+
+				<section class="clients clients__section">
+					<h2 class="vis-hid">Section with our clients</h2>
+					<ul class="container clients__row">
+						<li class="clients__icons"><img src="img/clients-company-icons/01.svg" alt="Hooli company icon"></li>
+						<li class="clients__icons"><img src="img/clients-company-icons/02.svg" alt="Lyft company icon"></li>
+						<li class="clients__icons"><img src="img/clients-company-icons/03.svg" alt="Pied-piper-hat company icon"></li>
+						<li class="clients__icons"><img src="img/clients-company-icons/04.svg" alt="Stripe company icon"></li>
+						<li class="clients__icons"><img src="img/clients-company-icons/05.svg" alt="AWS company icon"></li>
+						<li class="clients__icons"><img src="img/clients-company-icons/06.svg" alt="Reddit company icon"></li>
+					</ul>
+				</section>
 			</div>
 			@@include('_footer.html')
 		</div>
