made mailing section

--- a/#src/index.html
+++ b/#src/index.html
@@ -104,6 +104,15 @@
 						<li class="clients__icons"><img src="img/clients-company-icons/06.svg" alt="Reddit company icon"></li>
 					</ul>
 				</section>
+
+				<section class="mailing mailing__section">
+					<div class="container mailing__row">
+						<h3 class="mailing__title">Subscribe For Latest Newsletter</h3>
+						<form action="#" method="POST" class="mailing__form form">
+							<label for="mail" class="form__mail"><input id="mail" type="mail" name="Mail" placeholder="Your Mail"></label><button class="form__submit" type="submit">Subscribe</button>
+						</form>
+					</div>
+				</section>
 			</div>
 			@@include('_footer.html')
 		</div>
@@ -115,6 +124,3 @@
 
 	</body>
 </html>
-
-
-<!-- href="http://youtu.be/dQw4w9WgXcQ" -->
