fix bugs in mailing section

--- a/#src/index.html
+++ b/#src/index.html
@@ -109,7 +109,8 @@
 					<div class="container mailing__row">
 						<h3 class="mailing__title">Subscribe For Latest Newsletter</h3>
 						<form action="#" method="POST" class="mailing__form form">
-							<label for="mail" class="form__mail"><input id="mail" type="mail" name="Mail" placeholder="Your Mail"></label><button class="form__submit" type="submit">Subscribe</button>
+							<label for="mail" class="form__mail"><span class="vis-hid">Mail:</span></label>
+							<input id="mail" type="mail" name="Mail" placeholder="Your Mail"><button class="form__submit" type="submit">Subscribe</button>
 						</form>
 					</div>
 				</section>
