made support section

--- a/#src/index.html
+++ b/#src/index.html
@@ -114,6 +114,44 @@
 						</form>
 					</div>
 				</section>
+
+				<section class="support support__section">
+					<h2 class="support__title title">Get In Touch</h2>
+					<p class="support__text text">Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics </p>
+					<ul class="container support__row">
+
+						<li class="support__item">
+							<div class="item-support">
+								<div class="item-support__icon"><img src="img/supports-section/01.svg" alt="Phone icon"></div>
+								<a href="mailto: georgia.young@example.com" class="item-support__mail">georgia.young@example.com</a>
+								<a href="mailto: georgia.young@ple.com" class="item-support__mail">georgia.young@ple.com</a>
+								<p class="item-support__text">Get Support</p>
+								<a href="index.html" class="item-support__link">Submit Request</a>
+							</div>
+						</li>
+
+						<li class="support__item support__item--active">
+							<div class="item-support">
+								<div class="item-support__icon"><img src="img/supports-section/02.svg" alt="Location icon"></div>
+								<a href="mailto: georgia.young@example.com" class="item-support__mail item-support__mail--active">georgia.young@example.com</a>
+								<a href="mailto: georgia.young@ple.com" class="item-support__mail item-support__mail--active">georgia.young@ple.com</a>
+								<p class="item-support__text item-support__text--active">Get Support</p>
+								<a href="index.html" class="item-support__link item-support__link--active">Submit Request</a>
+							</div>
+						</li>
+
+						<li class="support__item">
+							<div class="item-support">
+								<div class="item-support__icon"><img src="img/supports-section/03.svg" alt="Telegram icon"></div>
+								<a href="mailto: georgia.young@example.com" class="item-support__mail">georgia.young@example.com</a>
+								<a href="mailto: georgia.young@ple.com" class="item-support__mail">georgia.young@ple.com</a>
+								<p class="item-support__text">Get Support</p>
+								<a href="index.html" class="item-support__link">Submit Request</a>
+							</div>
+						</li>
+
+					</ul>
+				</section>
 			</div>
 			@@include('_footer.html')
 		</div>
