made contact us section

--- a/#src/index.html
+++ b/#src/index.html
@@ -152,6 +152,16 @@
 
 					</ul>
 				</section>
+
+				<section class="contact contact__section">
+					<ul class="container contact__row">
+						<li class="contact__content">
+							<h2 class="contact__title title">Consulting Agency For Your Business</h2>
+							<p class="contact__text text">the quick fox jumps over the lazy dog</p>
+						</li>
+						<li class="contact__link"><a href="index.html">Contact us</a></li>
+					</ul>
+				</section>
 			</div>
 			@@include('_footer.html')
 		</div>
