made footer section

--- a/#src/_footer.html
+++ b/#src/_footer.html
@@ -1,5 +1,58 @@
-<footer class="footer">
-	<div class="container">
-		
+<footer class="footer footer__section">
+
+	<div class="footer-top">
+		<div class="container">
+			<div class="footer-top__item">
+				<p class="footer-top__title">Company Info</p>
+				<a href="index.html" class="footer-top__link">About Us</a>
+				<a href="index.html" class="footer-top__link">Carrier</a>
+				<a href="index.html" class="footer-top__link">We are hiring</a>
+				<a href="index.html" class="footer-top__link">Blog</a>
+			</div>
+
+			<div class="footer-top__item">
+				<p class="footer-top__title">Legal</p>
+				<a href="index.html" class="footer-top__link">About Us</a>
+				<a href="index.html" class="footer-top__link">Carrier</a>
+				<a href="index.html" class="footer-top__link">We are hiring</a>
+				<a href="index.html" class="footer-top__link">Blog</a>
+			</div>
+
+			<div class="footer-top__item">
+				<p class="footer-top__title">Features</p>
+				<a href="index.html" class="footer-top__link">About Us</a>
+				<a href="index.html" class="footer-top__link">Carrier</a>
+				<a href="index.html" class="footer-top__link">We are hiring</a>
+				<a href="index.html" class="footer-top__link">Blog</a>
+			</div>
+
+			<div class="footer-top__item">
+				<p class="footer-top__title">Resources</p>
+				<a href="index.html" class="footer-top__link">About Us</a>
+				<a href="index.html" class="footer-top__link">Carrier</a>
+				<a href="index.html" class="footer-top__link">We are hiring</a>
+				<a href="index.html" class="footer-top__link">Blog</a>
+			</div>
+
+			<div class="footer-top__item">
+				<p class="footer-top__title">Get In Touch</p>
+				<a href="tel: (480) 555-0103" class="footer-top__link footer-top__tel">(480) 555-0103</a>
+				<p class="footer-top__link footer-top__text">4517 Washington Ave. Manchester, Kentucky 39495</p>
+				<a href="mailto: debra.holt@example.com" class="footer-top__link footer-top__mail">debra.holt@example.com</a>
+			</div>
+		</div>
 	</div>
+
+	<div class="footer-bottom">
+		<div class="container">
+			<p class="footer-bottom__copyright">Made With Love By Figmaland All Right Reserved </p>
+			<ul class="footer-bottom__list">
+				<li><img src="img/footer-icons/second/01.svg" alt="Facebook"></li>
+				<li><img src="img/footer-icons/second/02.svg" alt="Instagram"></li>
+				<li><img src="img/footer-icons/second/03.svg" alt="Twitter"></li>
+				<li><img src="img/footer-icons/second/04.svg" alt="Youtube"></li>
+			</ul>
+		</div>
+	</div>
+
 </footer>
