--- a/#src/_header.html
+++ b/#src/_header.html
@@ -10,8 +10,7 @@
 					<li class="header__item"><a href="index.html">Contact</a></li>
 				</ul>
 			</li>
+			<li class="header__burger"><span></span></li>
 		</ul>
-
-		<button class="header__burger"><span></span></button>
 	</nav>
 </header>
