made adaptive in mailing section

--- a/#src/index.html
+++ b/#src/index.html
@@ -108,9 +108,9 @@
 				<section class="mailing mailing__section">
 					<div class="container mailing__row">
 						<h3 class="mailing__title">Subscribe For Latest Newsletter</h3>
-						<form action="#" method="POST" class="mailing__form form">
-							<label for="mail" class="form__mail"><span class="vis-hid">Mail:</span></label>
-							<input id="mail" type="mail" name="Mail" placeholder="Your Mail"><button class="form__submit" type="submit">Subscribe</button>
+						<form action="#" method="post" class="mailing__form form">
+							<div class="form__mail"><input type="mail" placeholder="Your Mail" name="Mail"></div>
+							<button class="form__button" type="submit">Subscribe</button>
 						</form>
 					</div>
 				</section>
